[project]
name = "transaction-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "pyright>=1.1.387",
    "pytest>=8.3.3",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.32.0",
]

[tool.ruff.lint]
extend-select = ["E", "W"]

[tool.uv]
dev-dependencies = ["httpx>=0.27.2", "pytest>=8.3.3", "ruff>=0.7.1"]

[tool.pytest.ini_options]
testpaths = ["tests.py"]
